# meal-plan-agent

./: .gitignore  README.md  requirements-agent.txt  requirements-server.txt
server/: .env.example  .gitignore  config.py  email_service.py  main.py  models.py  pyproject.toml  scheduler.py
server/agent/: agent.py  prompt.py  tools.py
