[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meal-plan-scheduler"
version = "0.1.0"
description = "Event scheduler for meal plan notifications"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-dotenv==1.0.0",
    "apscheduler==3.10.4",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "aiosmtplib==3.0.1",
    "email-validator==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "ruff==0.1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
